feat: create Footer component

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,7 +1,7 @@
 @import '../Styleguide/Stileguide.scss';
 
 .navbar {
-  grid-area: n;
+  grid-area: f;
   background-color: $secondaryColor;
   font-family: $font;
 }
