--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -6,11 +6,12 @@
   margin: 0 auto;
 
   grid-template-areas:
-    'h h'
-    'n c';
+    'h'
+    'c'
+    'f';
 
-  grid-template-rows: 60px 1fr;
-  grid-template-columns: 2fr 10fr;
+  grid-template-rows: 60px 1fr 60px;
+  grid-template-columns: 1fr;
 }
 
 .app_wrapper_content {
