--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,10 +1,19 @@
+@import '../Styleguide/Stileguide.scss';
+
 .header {
   grid-area: h;
-  background-color: #964c63;
+  background-color: $primaryColor;
+  font-family: $font;
 }
 
 .header img {
   height: 50px;
+}
+
+.header a {
+  text-decoration: none;
+  color: #ffffff;
+  padding-top: 5px;
 }
 
 .headerWrapper {
