--- a/src/components/MemberProgress/MembersProgress.module.scss
+++ b/src/components/MemberProgress/MembersProgress.module.scss
@@ -1,16 +1,1 @@
-.header {
-  grid-area: h;
-  background-color: #964c63;
-}
-
-.header img {
-  height: 50px;
-}
-
-.headerWrapper {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-direction: row;
-  padding: 0 20px;
-}
+@import '../Styleguide/Stileguide.scss';
