--- a/src/components/common/Footer/Footer.module.scss
+++ b/src/components/common/Footer/Footer.module.scss
@@ -1,31 +1,29 @@
 @import '../../Styleguide/Stileguide.scss';
 
 .footer {
-  grid-area: f;
-  background-color: $primaryColor;
   font-family: $font;
-  align-items: center;
   display: flex;
-  height: 60px;
-  color: #ffffff;
-  padding: 0 20px;
+  align-items: center;
   justify-content: space-between;
+  height: 60px;
+  padding: 0 20px;
+  color: #fff;
+  background-color: $primaryColor;
+
+  grid-area: f;
 }
 
 .footer a {
   text-decoration: none;
-  color: #ffffff;
+  color: #fff;
 }
 
 .icon {
   margin-left: 15px;
-  &:hover {
-    color: #f0bb0c;
-  }
 }
 
 .author {
   display: flex;
-  flex-direction: row;
   align-items: center;
+  flex-direction: row;
 }
