--- a/src/components/common/Header/Header.module.scss
+++ b/src/components/common/Header/Header.module.scss
@@ -1,14 +1,15 @@
 @import '../../Styleguide/Stileguide.scss';
 
 .header {
-  grid-area: h;
-  background-color: $primaryColor;
   font-family: $font;
   display: flex;
-  justify-content: space-between;
   align-items: center;
   flex-direction: row;
+  justify-content: space-between;
   padding: 0 20px;
+  background-color: $primaryColor;
+
+  grid-area: h;
 }
 
 .header img {
@@ -18,8 +19,5 @@
 
 .header a {
   text-decoration: none;
-  color: #ffffff;
-}
-
-.headerWrapper {
+  color: #fff;
 }
