--- a/src/components/common/Footer/Footer.module.scss
+++ b/src/components/common/Footer/Footer.module.scss
@@ -1,12 +1,12 @@
-@import '../../Styleguide/Stileguide.scss';
+@import '../../../styleguide/styleguide.scss';
 
 .footer {
   font-family: $font;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 60px;
-  padding: 0 20px;
+  height: 4rem;
+  padding: 0 1.5rem;
   color: #fff;
   background-color: $primaryColor;
 
@@ -19,7 +19,7 @@
 }
 
 .icon {
-  margin-left: 15px;
+  margin-left: 1rem;
 }
 
 .author {
