--- a/src/components/common/Header/Header.module.scss
+++ b/src/components/common/Header/Header.module.scss
@@ -1,4 +1,4 @@
-@import '../../Styleguide/Stileguide.scss';
+@import '../../../styleguide/styleguide.scss';
 
 .header {
   font-family: $font;
@@ -6,14 +6,14 @@
   align-items: center;
   flex-direction: row;
   justify-content: space-between;
-  padding: 0 20px;
+  padding: 0 1.5rem;
   background-color: $primaryColor;
 
   grid-area: h;
 }
 
 .header img {
-  height: 50px;
+  height: 3rem;
   padding-top: 5px;
 }
 
