feat: add register & edit functionality

--- a/src/components/Members/Members.module.scss
+++ b/src/components/Members/Members.module.scss
@@ -10,3 +10,12 @@
 .buttonWrapper button {
   width: 100%;
 }
+
+.tableWrapper {
+  margin: 0 auto;
+  width: fit-content;
+}
+
+#register {
+  margin-bottom: 1rem;
+}
