--- a/src/components/TaskPage/TaskPage.module.scss
+++ b/src/components/TaskPage/TaskPage.module.scss
@@ -1,1 +1,41 @@
 @import '../../styleguide/styleguide.scss';
+
+.wrapper {
+  width: 30%;
+  max-width: 500px;
+  border: 1px solid $primaryColor;
+  margin: 0 auto;
+  padding: 1.5rem;
+}
+
+textarea {
+  width: 100%;
+  margin-top: 1rem;
+  border: 1px solid $primaryColor;
+}
+
+.dateItem {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+}
+
+.membersItems {
+  width: 100%;
+  height: 300px;
+  margin: 0 auto;
+  overflow: auto;
+  border: 1px solid $primaryColor;
+}
+
+.buttonWrapper {
+  margin-top: 0.5rem;
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: 1fr 1fr;
+  gap: 10px;
+}
+
+.buttonWrapper button {
+  width: 100%;
+}
