--- a/src/components/MemberPage/MemberPage.module.scss
+++ b/src/components/MemberPage/MemberPage.module.scss
@@ -8,11 +8,12 @@
   padding: 1.5rem;
 }
 
-.formItem {
+.item {
   display: flex;
   justify-content: space-between;
   flex-direction: row;
   margin-top: 0.5rem;
+  margin-bottom: 1rem;
 }
 
 .buttonWrapper {
