--- a/src/styleguide/styleguide.scss
+++ b/src/styleguide/styleguide.scss
@@ -35,6 +35,11 @@ button {
     color: $secondaryColor;
     background-color: $dangerousColor;
   }
+  &:disabled {
+    border: 1px solid #9d9d9d;
+    color: #9d9d9d;
+    background-color: #fff;
+  }
 }
 
 .successButton {
@@ -43,6 +48,11 @@ button {
   &:hover {
     color: $secondaryColor;
     background-color: #227447;
+  }
+  &:disabled {
+    border: 1px solid #9d9d9d;
+    color: #9d9d9d;
+    background-color: #fff;
   }
 }
 
