--- a/src/utils/validators/FormField.module.scss
+++ b/src/utils/validators/FormField.module.scss
@@ -15,6 +15,13 @@
   margin-bottom: 1rem;
 }
 
+.textareaItem {
+  display: flex;
+  // justify-content: space-between;
+  flex-direction: column;
+  margin-bottom: 1rem;
+}
+
 // .remember input {
 //   width: 1rem;
 // }
