refactor: transform member, task & task track pages to popup

--- a/src/components/MemberPage/MemberPage.module.scss
+++ b/src/components/MemberPage/MemberPage.module.scss
@@ -6,6 +6,13 @@
   border: 1px solid $primaryColor;
   margin: 0 auto;
   padding: 1.5rem;
+  position: fixed;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  top: 50%;
+  transform: translate(0, -50%);
+  background-color: $secondaryColor;
 }
 
 .item {
