--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -11,6 +11,7 @@
   grid-template-rows: 4rem 1fr 4rem;
   grid-template-columns: 1fr;
   font-family: $font;
+  height: 100vh;
 }
 
 .contentWrapper {
