--- a/src/components/common/Preloader/Preloader.module.scss
+++ b/src/components/common/Preloader/Preloader.module.scss
@@ -1,6 +1,9 @@
 .preloader {
-  position: fixed;
-  top: 500px;
-  left: calc(50vw - 25px);
   height: 50px;
+  position: fixed;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  top: 50%;
+  transform: translate(0, -50%);
 }
