--- a/src/styleguide/styleguide.scss
+++ b/src/styleguide/styleguide.scss
@@ -14,6 +14,7 @@ $dangerousColor: #d04b31;
 button {
   font-weight: 800;
   padding: 1px 16px;
+  height: 1.5rem;
   color: $primaryColor;
   border: 1px solid $primaryColor;
   background-color: $secondaryColor;
