--- a/src/components/MemberPage/MemberPage.module.scss
+++ b/src/components/MemberPage/MemberPage.module.scss
@@ -1,8 +1,9 @@
 @import '../../styleguide/styleguide.scss';
 
 .wrapper {
-  width: 30%;
-  max-width: 500px;
+  width: 50%;
+  max-width: 1000px;
+  overflow: auto;
   border: 1px solid $primaryColor;
   margin: 0 auto;
   padding: 1.5rem;
@@ -15,12 +16,18 @@
   background-color: $secondaryColor;
 }
 
+.wrapper form {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 3rem 3rem 3rem 3rem 3rem 3rem 3rem;
+  grid-column-gap: 3rem;
+}
+
 .item {
   display: flex;
   justify-content: space-between;
   flex-direction: row;
   margin-top: 0.5rem;
-  margin-bottom: 1rem;
 }
 
 .buttonWrapper {
@@ -37,6 +44,7 @@
 
 input {
   width: 10rem;
+  height: 1rem;
 }
 
 select {
