fix: correct bug with adding & asigning tasks

--- a/src/styleguide/styleguide.scss
+++ b/src/styleguide/styleguide.scss
@@ -105,3 +105,14 @@ tbody tr:nth-child(even) {
     color: #f0bb0c;
   }
 }
+
+td .link {
+  color: #000000;
+  &:hover {
+    color: $primaryColor;
+  }
+}
+
+textarea {
+  overflow: auto;
+}
