--- a/src/components/TaskPage/TaskPage.module.scss
+++ b/src/components/TaskPage/TaskPage.module.scss
@@ -29,10 +29,19 @@ textarea {
 
 .membersItems {
   width: 100%;
-  height: 300px;
+  height: 200px;
   margin: 0 auto;
   overflow: auto;
   border: 1px solid $primaryColor;
+}
+
+.membersItems li {
+  list-style-type: none;
+}
+
+.membersItems input {
+  width: 1rem;
+  margin-right: 1rem;
 }
 
 .buttonWrapper {
