feat: implement adding task status

--- a/src/styleguide/styleguide.scss
+++ b/src/styleguide/styleguide.scss
@@ -78,6 +78,7 @@ tbody {
   text-align: center;
   border: 1px solid #9bc2e6;
   max-width: 20rem;
+  text-transform: capitalize;
 }
 
 .tableHeader {
