--- a/src/components/Account/Account.module.scss
+++ b/src/components/Account/Account.module.scss
@@ -8,22 +8,13 @@
   padding: 1.5rem;
 }
 
-.item {
-  display: flex;
-  justify-content: space-between;
-  flex-direction: row;
-  margin-bottom: 1rem;
+.buttonWrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 10px;
 }
 
-.item a {
-  text-decoration: underline;
-  color: #000000;
-  &:hover {
-    color: $primaryColor;
-  }
-}
-
-.item button {
-  width: 7rem;
+.buttonWrapper button {
+  width: 100%;
   margin-left: auto;
 }
