--- a/src/components/common/Header/Header.module.scss
+++ b/src/components/common/Header/Header.module.scss
@@ -37,3 +37,35 @@
 .loginBlock svg {
   margin-left: 1rem;
 }
+
+.nav {
+  width: 30%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+}
+
+.navTab {
+  width: 100%;
+  list-style-type: none;
+  padding: 0;
+}
+
+.navItem {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-top: 1px solid $secondaryColor;
+  border-left: 1px solid $secondaryColor;
+  border-right: 1px solid $secondaryColor;
+  border-radius: 5px 5px 0 0;
+  width: 100%;
+  height: 2rem;
+}
+
+.active {
+  background-color: $secondaryColor;
+  color: $primaryColor;
+  font-weight: bold;
+}
