--- a/src/components/TaskPage/TaskPage.module.scss
+++ b/src/components/TaskPage/TaskPage.module.scss
@@ -1,11 +1,11 @@
 @import '../../styleguide/styleguide.scss';
 
 .wrapper {
-  width: 30%;
-  max-width: 500px;
+  width: 70%;
   border: 1px solid $primaryColor;
   margin: 0 auto;
   padding: 1.5rem;
+  padding-bottom: 5rem;
   position: fixed;
   left: 0;
   right: 0;
@@ -13,6 +13,31 @@
   top: 50%;
   transform: translate(0, -50%);
   background-color: $secondaryColor;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 3rem 1fr;
+  gap: 10px;
+  grid-template-areas:
+    't t'
+    'l r';
+  // position: relative;
+}
+
+.left,
+.right {
+  width: 100%;
+}
+
+.left {
+  grid-area: l;
+}
+
+.right {
+  grid-area: r;
+}
+
+.title {
+  grid-area: t;
 }
 
 textarea {
@@ -29,10 +54,12 @@ textarea {
 
 .membersItems {
   width: 100%;
-  height: 200px;
+  height: 21.3rem;
   margin: 0 auto;
   overflow: auto;
-  border: 1px solid $primaryColor;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  padding: 1.5rem;
 }
 
 .membersItems li {
@@ -44,12 +71,19 @@ textarea {
   margin-right: 1rem;
 }
 
+.membersTitle {
+  margin-bottom: 0.5rem;
+}
+
 .buttonWrapper {
   margin-top: 0.5rem;
   display: grid;
   grid-template-rows: 1fr;
   grid-template-columns: 1fr 1fr;
   gap: 10px;
+  position: absolute;
+  right: 1.5rem;
+  bottom: 1.5rem;
 }
 
 .buttonWrapper button {
