--- a/src/components/common/Header/Header.module.scss
+++ b/src/components/common/Header/Header.module.scss
@@ -42,6 +42,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
 }
 
 .nav {
@@ -95,4 +96,13 @@
   top: -10px;
   border: 10px solid transparent;
   border-bottom: 10px solid $secondaryColor;
+}
+
+#account {
+  cursor: pointer;
+  font-weight: 800;
+  margin: 0;
+  &:hover {
+    color: #f0bb0c;
+  }
 }
