--- a/src/components/TaskPage/TaskPage.module.scss
+++ b/src/components/TaskPage/TaskPage.module.scss
@@ -15,6 +15,12 @@
   background-color: $secondaryColor;
 }
 
+.wrapper form {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 5.5rem 9rem 5rem 5rem;
+}
+
 textarea {
   width: 100%;
   margin-top: 1rem;
@@ -27,9 +33,13 @@ textarea {
   flex-direction: row;
 }
 
+.membersTitle {
+  margin-bottom: 0.5rem;
+}
+
 .membersItems {
   width: 100%;
-  height: 200px;
+  height: 150px;
   margin: 0 auto;
   overflow: auto;
   border: 1px solid $primaryColor;
@@ -45,7 +55,6 @@ textarea {
 }
 
 .buttonWrapper {
-  margin-top: 0.5rem;
   display: grid;
   grid-template-rows: 1fr;
   grid-template-columns: 1fr 1fr;
@@ -54,4 +63,12 @@ textarea {
 
 .buttonWrapper button {
   width: 100%;
+}
+
+.customMessage {
+  display: flex;
+  color: $dangerousColor;
+  margin: 0;
+  align-items: center;
+  height: 4rem;
 }
