--- a/src/components/common/TextAreaField/TextAreaField.module.scss
+++ b/src/components/common/TextAreaField/TextAreaField.module.scss
@@ -18,5 +18,7 @@
 .textareaItem {
   display: flex;
   flex-direction: column;
-  margin-bottom: 1rem;
+  textarea {
+    margin-top: 0.5rem;
+  }
 }
