--- a/src/components/Login/Login.module.scss
+++ b/src/components/Login/Login.module.scss
@@ -8,6 +8,12 @@
   padding: 1.5rem;
 }
 
+.wrapper form {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 5rem 5rem;
+}
+
 .item {
   display: flex;
   justify-content: space-between;
@@ -26,4 +32,12 @@
 .message {
   height: 4rem;
   color: $dangerousColor;
+}
+
+.customMessage {
+  display: flex;
+  color: $dangerousColor;
+  margin: 0;
+  align-items: center;
+  height: 2rem;
 }
