--- a/src/components/common/PasswordField/PasswordField.module.scss
+++ b/src/components/common/PasswordField/PasswordField.module.scss
@@ -6,6 +6,10 @@
 
 .item {
   display: flex;
-  justify-content: space-between;
-  flex-direction: row;
+  flex-direction: column;
+}
+
+.item input {
+  width: 100%;
+  margin-top: 0.5rem;
 }
