fix: fix UI bug with showing account tip

--- a/src/components/common/Header/Header.module.scss
+++ b/src/components/common/Header/Header.module.scss
@@ -77,25 +77,10 @@
   font-weight: bold;
 }
 
-.tip {
-  margin-top: 10px;
-  max-width: 150px;
+#tip {
   background-color: $secondaryColor;
   color: $primaryColor;
   border: 1px solid $primaryColor;
-  border-top: none;
-  padding: 10px;
-  border-radius: 5px;
-}
-
-.tip::after,
-.tip::after {
-  content: '';
-  position: absolute;
-  left: calc(50% - 10px);
-  top: -10px;
-  border: 10px solid transparent;
-  border-bottom: 10px solid $secondaryColor;
 }
 
 #account {
