--- a/src/components/Account/Account.module.scss
+++ b/src/components/Account/Account.module.scss
@@ -1,17 +1,12 @@
 @import '../../styleguide/styleguide.scss';
 
 .wrapper {
-  width: 30%;
-  max-width: 500px;
+  width: 100%;
+  // max-width: 500px;
   border: 1px solid $primaryColor;
   margin: 0 auto;
   padding: 1.5rem;
   overflow: auto;
-  position: fixed;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translate(0, -50%);
   background-color: $secondaryColor;
 }
 
