--- a/src/components/MemberCard/MemberCard.module.scss
+++ b/src/components/MemberCard/MemberCard.module.scss
@@ -10,6 +10,10 @@
   background-color: $secondaryColor;
 }
 
+.wrapper .title {
+  margin-bottom: 2rem;
+}
+
 .buttonWrapper {
   display: flex;
   justify-content: flex-end;
@@ -21,7 +25,7 @@
 
 .group {
   display: grid;
-  border: 1px solid $primaryColor;
+  border-bottom: 1px solid $primaryColor;
   padding: 1rem;
   margin-bottom: 2rem;
 }
@@ -44,4 +48,9 @@
 .education {
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 5rem 5rem;
+}
+
+.icon {
+  margin-right: 2rem;
+  color: #f0bb0c;
 }
