feat: style TaskCard.jsx

--- a/src/components/TaskCard/TaskCard.module.scss
+++ b/src/components/TaskCard/TaskCard.module.scss
@@ -15,6 +15,11 @@
   grid-template-rows: 6rem 6rem 6rem 3rem;
 }
 
+.icon {
+  margin-right: 2rem;
+  color: #f0bb0c;
+}
+
 .wrapper form {
   display: grid;
   grid-template-columns: 1fr;
