--- a/src/components/MemberPage/MemberPage.module.scss
+++ b/src/components/MemberPage/MemberPage.module.scss
@@ -24,14 +24,13 @@
 
 .buttonWrapper {
   margin-top: 0.5rem;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
 }
 
-.buttonWrapper button {
-  width: 100%;
-  height: 3rem;
+.leftButton {
+  margin-right: 0.5rem;
 }
 
 .customMessage {
@@ -42,6 +41,6 @@
   height: 2rem;
 }
 
-legend {
+.radio legend {
   font-size: 1rem;
 }
