--- a/src/styleguide/styleguide.scss
+++ b/src/styleguide/styleguide.scss
@@ -17,6 +17,7 @@ $dangerousColor: #d04b31;
 }
 
 .defaultButton {
+  min-width: 5rem;
   font-weight: 600;
   color: $primaryColor;
   border: 1px solid $primaryColor;
@@ -34,6 +35,7 @@ $dangerousColor: #d04b31;
 }
 
 .dangerousButton {
+  min-width: 5rem;
   font-weight: 600;
   color: $dangerousColor;
   border: 1px solid $dangerousColor;
@@ -51,6 +53,7 @@ $dangerousColor: #d04b31;
 }
 
 .successButton {
+  min-width: 5rem;
   font-weight: 600;
   color: #227447;
   border: 1px solid #227447;
@@ -133,10 +136,6 @@ td .link {
 
 textarea {
   overflow: auto;
-}
-
-legend {
-  font-size: 1rem;
 }
 
 #tooltip-top > .tooltip-inner {
