--- a/src/components/Members/Members.module.scss
+++ b/src/components/Members/Members.module.scss
@@ -1,4 +1,5 @@
 @import '../../styleguide/styleguide.scss';
+@import '../common/TableHeader/TableHeader.module.scss';
 
 .buttonWrapper {
   display: grid;
@@ -8,6 +9,9 @@
 
 .buttonWrapper button {
   width: 100%;
+  @media (max-width: 670px) {
+    width: fit-content;
+  }
 }
 
 .tableWrapper {
@@ -17,4 +21,89 @@
 
 .register {
   margin-bottom: 1rem;
+}
+
+.memberIndex,
+.memberAge {
+  max-width: 3rem;
+}
+
+.memberAge {
+  max-width: 3rem;
+  @media (max-width: 910px) {
+    display: none;
+  }
+}
+
+.memberName {
+  max-width: 20rem;
+  @media (max-width: 550px) {
+    max-width: 18rem;
+  }
+  @media (max-width: 500px) {
+    max-width: 16rem;
+  }
+  @media (max-width: 465px) {
+    max-width: 14rem;
+  }
+  @media (max-width: 430px) {
+    max-width: 12rem;
+  }
+  @media (max-width: 400px) {
+    max-width: 10rem;
+  }
+  @media (max-width: 370px) {
+    max-width: 8rem;
+  }
+  @media (max-width: 340px) {
+    max-width: 6rem;
+  }
+}
+
+.memberDirection,
+.memberEducation {
+  max-width: 6rem;
+}
+
+.memberDirection {
+  .directionIcon {
+    display: none;
+  }
+  @media (max-width: 580px) {
+    .directionText {
+      display: none;
+    }
+    .directionIcon {
+      display: block;
+    }
+  }
+}
+
+.memberEducation {
+  @media (max-width: 860px) {
+    display: none;
+  }
+}
+
+.memberStartDate {
+  @media (max-width: 770px) {
+    display: none;
+  }
+}
+
+.membersButtonText {
+  @media (max-width: 670px) {
+    display: none;
+  }
+}
+
+.membersButtonIcon {
+  display: none;
+  @media (max-width: 670px) {
+    display: block;
+  }
+}
+
+.link p {
+  margin-bottom: 0;
 }
