--- a/src/components/common/Footer/Footer.module.scss
+++ b/src/components/common/Footer/Footer.module.scss
@@ -9,7 +9,6 @@
   padding: 0 1.5rem;
   color: #fff;
   background-color: $primaryColor;
-
   grid-area: f;
 }
 
@@ -26,4 +25,7 @@
   display: flex;
   align-items: center;
   flex-direction: row;
+  @media (max-width: 430px) {
+    display: none;
+  }
 }
