--- a/src/components/common/Header/Header.module.scss
+++ b/src/components/common/Header/Header.module.scss
@@ -8,21 +8,16 @@
   justify-content: space-between;
   padding: 0 1.5rem;
   background-color: $primaryColor;
-
   grid-area: h;
   color: #ffffff;
+  @media (max-width: 400px) {
+    padding: 0 0.5rem;
+  }
 }
 
 .header img {
   height: 3rem;
   padding-top: 5px;
-}
-
-.header svg path {
-  cursor: pointer;
-  &:hover {
-    fill: #f0bb0c;
-  }
 }
 
 .header button {
@@ -34,10 +29,6 @@
   color: #fff;
 }
 
-.loginBlock svg {
-  margin-left: 1rem;
-}
-
 .loginBlock {
   display: flex;
   flex-direction: row;
@@ -46,6 +37,7 @@
 }
 
 .nav {
+  min-width: 150px;
   width: 30%;
   height: 100%;
   display: flex;
@@ -69,6 +61,7 @@
   border-radius: 5px 5px 0 0;
   width: 100%;
   height: 2rem;
+  min-width: 75px;
 }
 
 .active {
@@ -89,5 +82,39 @@
   margin: 0;
   &:hover {
     color: #f0bb0c;
+  }
+}
+
+.bigLogo {
+  @media (max-width: 465px) {
+    display: none;
+  }
+}
+
+.smallLogo {
+  display: none;
+  @media (max-width: 465px) {
+    display: block;
+  }
+}
+
+.dropDownMenu button {
+  color: #ffffff;
+  border: 1px solid #ffffff;
+  width: 3rem;
+  font-weight: 600;
+  &:hover {
+    color: #ffffff;
+  }
+}
+
+#dropDownMenuAccount,
+#dropDownMenuLogout {
+  color: $primaryColor;
+  background-color: $secondaryColor;
+  width: 100%;
+  &:hover {
+    background-color: $primaryColor;
+    color: $secondaryColor;
   }
 }
