--- a/src/components/common/Header/Header.module.scss
+++ b/src/components/common/Header/Header.module.scss
@@ -43,12 +43,14 @@
   display: flex;
   flex-direction: row;
   align-items: flex-end;
+  text-decoration: none;
 }
 
 .navTab {
   width: 100%;
   list-style-type: none;
   padding: 0;
+  text-decoration: none;
 }
 
 .navItem {
@@ -62,12 +64,22 @@
   width: 100%;
   height: 2rem;
   min-width: 75px;
+  text-decoration: none;
+  color: #fff;
+  &:hover {
+    background-color: #b4daf2;
+    color: $primaryColor;
+    font-weight: 600;
+  }
 }
 
 .active {
   background-color: $secondaryColor;
   color: $primaryColor;
   font-weight: bold;
+  &:hover {
+    background-color: $secondaryColor;
+  }
 }
 
 #tip {
@@ -104,7 +116,8 @@
   width: 3rem;
   font-weight: 600;
   &:hover {
-    color: #ffffff;
+    background-color: #b4daf2;
+    color: $primaryColor;
   }
 }
 
