--- a/src/styleguide/styleguide.scss
+++ b/src/styleguide/styleguide.scss
@@ -134,7 +134,7 @@ tbody tr:nth-child(even) {
   cursor: pointer;
   margin: 0;
   &:hover {
-    color: $orangeColor;
+    color: #b4daf2;
   }
 }
 
