--- a/src/components/Members/Members.module.scss
+++ b/src/components/Members/Members.module.scss
@@ -69,6 +69,9 @@
   .directionIcon {
     display: none;
   }
+  .directionText {
+    margin: 0;
+  }
   @media (max-width: 580px) {
     .directionText {
       display: none;
