--- a/src/components/Members/Members.module.scss
+++ b/src/components/Members/Members.module.scss
@@ -9,9 +9,7 @@
 
 .buttonWrapper button {
   width: 100%;
-  @media (max-width: 670px) {
-    width: fit-content;
-  }
+  min-width: 2rem;
 }
 
 .tableWrapper {
@@ -23,46 +21,17 @@
   margin-bottom: 1rem;
 }
 
-.memberIndex,
-.memberAge {
-  max-width: 3rem;
-}
-
-.memberAge {
-  max-width: 3rem;
-  @media (max-width: 910px) {
+.memberIndex {
+  @media (max-width: 400px) {
     display: none;
   }
 }
 
-.memberName {
-  max-width: 20rem;
-  @media (max-width: 550px) {
-    max-width: 18rem;
+.memberAge {
+  max-width: 3rem;
+  @media (max-width: 925px) {
+    display: none;
   }
-  @media (max-width: 500px) {
-    max-width: 16rem;
-  }
-  @media (max-width: 465px) {
-    max-width: 14rem;
-  }
-  @media (max-width: 430px) {
-    max-width: 12rem;
-  }
-  @media (max-width: 400px) {
-    max-width: 10rem;
-  }
-  @media (max-width: 370px) {
-    max-width: 8rem;
-  }
-  @media (max-width: 340px) {
-    max-width: 6rem;
-  }
-}
-
-.memberDirection,
-.memberEducation {
-  max-width: 6rem;
 }
 
 .memberDirection {
@@ -72,18 +41,19 @@
   .directionText {
     margin: 0;
   }
-  @media (max-width: 580px) {
+  @media (max-width: 690px) {
     .directionText {
       display: none;
     }
     .directionIcon {
-      display: block;
+      display: flex;
+      justify-content: center;
     }
   }
 }
 
 .memberEducation {
-  @media (max-width: 860px) {
+  @media (max-width: 865px) {
     display: none;
   }
 }
@@ -94,15 +64,22 @@
   }
 }
 
+.memberButtons {
+  @media (max-width: 690px) {
+    min-width: 6rem;
+    width: fit-content;
+  }
+}
+
 .membersButtonText {
-  @media (max-width: 670px) {
+  @media (max-width: 690px) {
     display: none;
   }
 }
 
 .membersButtonIcon {
   display: none;
-  @media (max-width: 670px) {
+  @media (max-width: 690px) {
     display: block;
   }
 }
