--- a/src/components/common/TableHeader/TableHeader.module.scss
+++ b/src/components/common/TableHeader/TableHeader.module.scss
@@ -21,13 +21,13 @@
 }
 
 .memberAgeHeader {
-  @media (max-width: 910px) {
+  @media (max-width: 925px) {
     display: none;
   }
 }
 
 .memberEducationHeader {
-  @media (max-width: 860px) {
+  @media (max-width: 865px) {
     display: none;
   }
 }
@@ -40,7 +40,7 @@
 
 .tableHeaderText {
   margin: 0;
-  @media (max-width: 580px) {
+  @media (max-width: 690px) {
     display: none;
   }
 }
@@ -48,7 +48,66 @@
 .tableHeaderIcon {
   display: none;
   margin: 0 auto;
-  @media (max-width: 580px) {
+  @media (max-width: 690px) {
     display: block;
+  }
+}
+
+.memberIndexHeader {
+  max-width: 7rem;
+  min-width: 5rem;
+  width: 10%;
+  @media (max-width: 400px) {
+    display: none;
+  }
+}
+
+.memberNameHeader {
+  max-width: 50rem;
+  min-width: 20rem;
+  width: 35%;
+  @media (max-width: 1030px) {
+    width: 30%;
+  }
+  @media (max-width: 975px) {
+    width: 25%;
+  }
+  @media (max-width: 875px) {
+    width: 23%;
+  }
+  @media (max-width: 690px) {
+    width: 50%;
+  }
+  @media (max-width: 500px) {
+    width: 45%;
+  }
+  @media (max-width: 350px) {
+    width: 40%;
+  }
+}
+
+.memberEducationHeader,
+.memberDirectionHeader,
+.memberStartDateHeader {
+  max-width: 20rem;
+  min-width: 5rem;
+  width: 12%;
+  @media (max-width: 1090px) {
+    width: 10%;
+  }
+}
+
+.memberAgeHeader {
+  max-width: 5rem;
+  min-width: 3rem;
+  width: 5%;
+}
+
+.memberButtonsHeader {
+  max-width: 15rem;
+  min-width: 11rem;
+  width: 19%;
+  @media (max-width: 690px) {
+    min-width: 6rem;
   }
 }
