--- a/src/styleguide/styleguide.scss
+++ b/src/styleguide/styleguide.scss
@@ -122,6 +122,7 @@ table {
   border-collapse: separate;
   color: $textColor;
   table-layout: fixed;
+  width: 100%;
 }
 
 tbody {
@@ -134,7 +135,6 @@ td {
   padding: 8px;
   text-align: center;
   border: 1px solid #9bc2e6;
-  width: fit-content;
   text-transform: capitalize;
   white-space: nowrap;
   word-wrap: break-word;
