--- a/src/components/MemberProgress/MembersProgress.module.scss
+++ b/src/components/MemberProgress/MembersProgress.module.scss
@@ -1,1 +1,67 @@
 @import '../../styleguide/styleguide.scss';
+@import '../common/TableHeader/TableHeader.module';
+
+.taskIndexHeader {
+  max-width: 7rem;
+  min-width: 5rem;
+  width: 10%;
+  @media (max-width: 690px) {
+    display: none;
+  }
+}
+
+.taskIndex {
+  @media (max-width: 690px) {
+    display: none;
+  }
+}
+
+.taskNameHeader {
+  max-width: 15rem;
+  min-width: 5rem;
+  width: 20%;
+}
+
+.taskNoteHeader {
+  min-width: 5rem;
+  width: 58%;
+  @media (max-width: 870px) {
+    width: 55%;
+  }
+  @media (max-width: 850px) {
+    width: 52%;
+  }
+  @media (max-width: 820px) {
+    width: 50%;
+  }
+  @media (max-width: 810px) {
+    width: 45%;
+  }
+  @media (max-width: 770px) {
+    width: 40%;
+  }
+  @media (max-width: 720px) {
+    width: 35%;
+  }
+  @media (max-width: 600px) {
+    width: 30%;
+  }
+  @media (max-width: 560px) {
+    width: 25%;
+  }
+}
+
+.taskNoteDateHeader {
+  max-width: 20rem;
+  min-width: 7rem;
+  width: 12%;
+  @media (max-width: 470px) {
+    display: none;
+  }
+}
+
+.taskNoteDate {
+  @media (max-width: 470px) {
+    display: none;
+  }
+}
