feat: implement MembersTasks.jsx adaptive design

--- a/src/components/common/TableHeader/TableHeader.module.scss
+++ b/src/components/common/TableHeader/TableHeader.module.scss
@@ -10,7 +10,13 @@
 .taskIndexHeader,
 .taskNameHeader,
 .taskNoteHeader,
-.taskNoteDateHeader {
+.taskNoteDateHeader,
+.memberTaskIndexHeader,
+.memberTaskNameHeader,
+.memberTaskStartHeader,
+.memberTaskDeadlineHeader,
+.memberTaskStatusHeader,
+.memberTaskMarkTaskHeader {
   color: #fff;
   background-color: $primaryColor;
   padding: 8px;
