--- a/src/components/MemberTasks/MembersTasks.module.scss
+++ b/src/components/MemberTasks/MembersTasks.module.scss
@@ -1,13 +1,152 @@
 @import '../../styleguide/styleguide.scss';
+@import '../common/TableHeader/TableHeader.module';
 
 .buttonWrapper {
   display: grid;
-  grid-template-rows: 1fr;
   grid-template-columns: 1fr 1fr;
-  gap: 0.5rem;
+  grid-gap: 10px;
+  margin: 0 auto;
+  .successButton,
+  .dangerousButton {
+    @media (max-width: 370px) {
+      padding: 0;
+    }
+  }
+  @media (max-width: 980px) {
+    min-width: 6rem;
+    width: fit-content;
+  }
 }
 
 .buttonWrapper button {
   width: 100%;
-  max-width: 100px;
+  min-width: 2rem;
+}
+
+.memberTaskIndexHeader,
+.memberTaskIndex {
+  max-width: 7rem;
+  min-width: 5rem;
+  width: 3%;
+  @media (max-width: 1000px) {
+    width: 1%;
+  }
+  @media (max-width: 480px) {
+    display: none;
+  }
+}
+
+.memberTaskStartHeader,
+.memberTaskDeadlineHeader {
+  max-width: 10rem;
+  min-width: 7rem;
+  width: 4%;
+  @media (max-width: 980px) {
+    width: 3%;
+  }
+}
+
+.memberTaskStartHeader,
+.memberTaskStart {
+  @media (max-width: 750px) {
+    display: none;
+  }
+}
+
+.memberTaskDeadlineHeader,
+.memberTaskDeadline {
+  @media (max-width: 690px) {
+    display: none;
+  }
+}
+
+.memberTaskNameHeader {
+  max-width: 15rem;
+  min-width: 5rem;
+  width: 20%;
+  @media (max-width: 1260px) {
+    width: 18%;
+  }
+  @media (max-width: 1240px) {
+    width: 16%;
+  }
+  @media (max-width: 1180px) {
+    width: 14%;
+  }
+  @media (max-width: 1130px) {
+    width: 12%;
+  }
+  @media (max-width: 1060px) {
+    width: 10%;
+  }
+  @media (max-width: 980px) {
+    width: 8%;
+  }
+  @media (max-width: 900px) {
+    width: 6%;
+  }
+  @media (max-width: 480px) {
+    width: 4%;
+  }
+}
+
+.memberTaskStatusHeader {
+  max-width: 7rem;
+  min-width: 5rem;
+  width: 3%;
+  @media (max-width: 980px) {
+    width: 2%;
+  }
+  @media (max-width: 690px) {
+    width: 1%;
+  }
+}
+
+.memberTaskStatus {
+  @media (max-width: 370px) {
+    padding: 0.5rem 0;
+  }
+}
+
+.memberTaskMarkTaskHeader {
+  max-width: 7rem;
+  min-width: 5rem;
+  width: 6%;
+  @media (max-width: 980px) {
+    width: 3%;
+  }
+}
+
+.memberTaskManage {
+  @media (max-width: 370px) {
+    padding: 0;
+  }
+}
+
+.memberTaskButtonText {
+  @media (max-width: 980px) {
+    display: none;
+  }
+}
+
+.memberTaskButtonIcon {
+  display: none;
+  @media (max-width: 980px) {
+    display: block;
+    margin: 0 auto;
+  }
+}
+
+.memberTaskText {
+  @media (max-width: 690px) {
+    display: none;
+  }
+}
+
+.memberTaskIcon {
+  display: none;
+  margin: auto auto;
+  @media (max-width: 690px) {
+    display: block;
+  }
 }
