--- a/src/components/common/TableHeader/TableHeader.module.scss
+++ b/src/components/common/TableHeader/TableHeader.module.scss
@@ -21,7 +21,8 @@
 .taskManagementTaskNameHeader,
 .taskManagementStartDateHeader,
 .taskManagementDeadlineHeader,
-.taskManagementPanelHeader {
+.taskManagementPanelHeader,
+.memberTaskTrackHeader {
   color: #fff;
   background-color: $primaryColor;
   padding: 8px;
